# leptos_bdk_web_wallet

./: Cargo.toml  README.md  buiild.sh  index.html
docs/: 404.html  index.html  leptos_start_template-27249cfa47a85c95.js  leptos_start_template-68d315422edd29ce.js  leptos_start_template-68d315422edd29ce_bg.wasm  leptos_start_template-e9c1cfc0ff78c08b.js  leptos_start_template-e9c1cfc0ff78c08b_bg.wasm
src/: main.rs
