[package]
name = "leptos_start_template"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", features = ["nightly", "csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
bdk = { version = "0.29", default-features = false, features = [
    "std",
    "all-keys",
    "async-interface",
    "use-esplora-async",
] }
web-sys = { version = "0.3.67", features = [
    'History',
    'Window',
    'Location',
    'CustomEvent',
    'CustomEventInit',
    'Storage',
] }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
futures = "0.3.30"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
incremental = false
